# ProgrammingLanguages

Problem1/: CMakeLists.txt  PyWidgetsClasses.h  PyWidgetsFunctions.h  PyWidgetsFunctionsModule.cpp  PyWidgetsMacroses.h  PyWidgetsModule.cpp  widgets.cpp  widgets.h
Problem2/: build.gradle  index.html  settings.gradle
Problem2/gradle/wrapper/: gradle-wrapper.properties
Problem2/src/: main.kt
Problem2/src/main/kotlin/: extensions.kt  main.kt  parser.kt  tokeniser.kt  tokenizer.kt
Problem2/src/resources/: index.html
Problem3/: GameHub.cs  GameManager.cs  IGameHandler.cs  Problem3.sln  Program.cs  SparseMatrix.cs  Startup.cs
Problem3/wwwroot/: client.js  index.html  signalr-client-1.0.0-alpha2-final.js
Problem4/src/: image_rec.hrl  main.erl
